deploy: realfaq/hugo-ivaness@918ad626eef5417f91f69b515eaac8fc15afe40a

--- a/anus/config.yml
+++ b/anus/config.yml
@@ -2,8 +2,9 @@ backend:
   name: github
   repo: realfaq/hugo-ivaness
   branch: main
-  base_url: https://api.netlify.com
+  base_url: https://oauth.sveltia.app
   auth_endpoint: auth
+  client_id: Ov23libMEbkGzExc1UfX
 
 media_folder: "static/images"
 public_folder: "/images"
